# rainyday_src is code that we don't currently need, and would be
# in the "unused" directory but might be needed for a port (e.g. 
# to DOS or something).
rainyday_src = dummy.cc fsync.cc _chmod.cc sid_list.cc pipe.h pipe.cc \
	move-if-change \
	dosfile.cc ffsync.cc
EXTRA_DIST = $(rainyday_src) README
